add dashboard login
